# Python

./: Character Pattern optimized.py  Character Pattern.py  LMS.py  Number Guessing Game.py  ORM.py  To-Do List.py  comn char.py  download_img.py  journal_entries.py  timer.py
Chat Bot/: server.py
E-Commerce Console App/: main.py  pyproject.toml
Gen Ai/: pyproject.toml
Gen Ai/api/: app.py
Gen Ai/chatbot/: main.py
Inventory Management System/: auth.py  database.py  interface.py  inventory.py  main.py  product.py  pyproject.toml
LMS web/: app.py  config.py  models.py  pyproject.toml  routes.py
LMS web/templates/: add_item.html  add_member.html  base.html  home.html  view_items.html  view_members.html
Movie Ticket Booking/: Data_Initialization.py  database.py  interface.py  main.py  pyproject.toml
Multi Threading/: thread.py
Multi Threading/Image Processor/: ImageProcessor.py
Stock_Tracker/: stock_tracker.py
weak1/: average.py  calculator.py  data type.py  even_odd.py  factorial.py  funcAsArgs.py  global_var.py  greater_less.py  greet.py  lambda.py  leap_year.py  loop_e5.py  lst_op.py  max_num.py  mem_op.py  nonlocal.py  op1.py  person_age.py  sdpq.py  squareOfNum.py  str_op.py  vowels.py
workbook/: armstrong.py  average.py  count_digit.py  diamond.py  fibonacci.py  gcd.py  lcm.py  muliplication_table.py  palindrome.py  pascal.py  power.py  prime_no.py  prime_no_1-100.py  pyramid_star.py  reverseNo.py  star.py  star1.py  sumOfDigit.py  vowel_conso.py
